# devtodolist

./: CDC.md  CONTRIBUTING.md  Cargo.toml  DOC.md  LICENSE  README.md  todolist.md
.github/workflows/: build.yml
src/: cli.rs  db.rs  display.rs  error.rs  gamification.rs  lib.rs  main.rs  models.rs
src/commands/: add.rs  config.rs  dateparse.rs  delete.rs  deps.rs  edit.rs  export.rs  init.rs  label.rs  list.rs  mod.rs  profile.rs  proof.rs  review.rs  role.rs  show.rs  stats.rs  status.rs  sync_cmd.rs
src/entities/: achievement_unlocked.rs  comment.rs  dev_role.rs  gamification.rs  label.rs  mod.rs  reviewer.rs  task.rs  task_commit.rs  task_dependency.rs  task_label.rs
src/migration/: m20240101_000001_initial.rs  m20240101_000002_gamification.rs  m20240101_000003_deps_roles_proofs.rs  mod.rs
src/providers/: github.rs  gitlab.rs  mod.rs
tests/: cli_dates.rs  cli_deps.rs  cli_proof.rs  cli_role.rs  cli_smoke.rs  gamification_db.rs
tests/common/: mod.rs
