[package]
name = "devtodo"
version = "0.1.0"
edition = "2024"
description = "A developer todolist CLI where each task is a pull request"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
sea-orm = { version = "1", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
comfy-table = "7"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dialoguer = "0.11"
indicatif = "0.17"
async-trait = "0.1"
dateparser = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rstest = "0.23"
